@@ -27,6 +27,9 @@
 
 	* src/core/exmpp_sup.erl: Start exmpp_xml.
 
+	* src/core/exmpp_xml.erl, c_src/exmpp_xml_expat.c: Rename commands
+	from EXPAT_* to COMMAND_*, now that other port drivers may come in.
+
 2008-10-08  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
 
 	* src/core/exmpp_jid.erl: Add functions to serialize JIDs using their
